# trilium_task_ics_py

./: _auth.py  example.env  example.ics  pyproject.toml  trilium_task_ics.py
